--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -8,4 +8,7 @@ server.port=8090
 
 spring.application.name=loans
 spring.profiles.active=prod
-spring.config.import=optional:configserver:http//:localhost:8071
+spring.config.import=optional:configserver:http://localhost:8071/
+
+
+management.endpoints.web.exposure.include=*
