cards microservice as a client config

--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 server.port=9000
 
+spring.application.name=cards
+spring.profiles.active=prod
+spring.config.import=optional:configserver:http://localhost:8071/
+
+management.endpoints.web.exposure.include=*
