--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -69,12 +69,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					<image>
+						<name>vitoriacarvalho/${project.artifactId}</name>
+					</image>
 				</configuration>
 			</plugin>
 		</plugins>
