--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -11,3 +11,15 @@ spring.profiles.active=prod
 spring.config.import=optional:configserver:http://localhost:8071/
 
 management.endpoints.web.exposure.include=*
+
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
+
+#Configurating info endpoint
+info.app.name=Cards Microservice
+info.app.description=eazy bank cards application
+info.app.version=1.0.0
+
+management.info.env.enabled=true
