--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -12,3 +12,15 @@ spring.config.import=optional:configserver:http://localhost:8071/
 
 
 management.endpoints.web.exposure.include=*
+
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
+
+#Configurating info endpoint
+info.app.name=Loans Microservice
+info.app.description=eazy bank loans application
+info.app.version=1.0.0
+
+management.info.env.enabled=true
