--- a/accounts/docker-compose/default/docker-compose.yml
+++ b/accounts/docker-compose/default/docker-compose.yml
@@ -3,15 +3,34 @@ version: "3.8"
 services:
 
   configserver:
-    image: vitoriacarvalho/configserver:latest
+    image: eazybytes/configserver:latest
     mem_limit: 700m
     ports:
       - "8071:8071"
     networks:
      - eazybank
+   
+  eurekaserver:
+    image: eazybytes/eurekaserver:latest
+    mem_limit: 700m
+    ports:
+      - "8070:8070"
+    networks:
+     - eazybank
+    depends_on:
+      - configserver
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 15s
+        max_attempts: 3
+        window: 120s
+    environment:
+      SPRING_PROFILES_ACTIVE: default
+      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
       
   accounts:
-    image: vitoriacarvalho/accounts:latest
+    image: eazybytes/accounts:latest
     mem_limit: 700m
     ports:
       - "8080:8080"
@@ -19,18 +38,20 @@ services:
       - eazybank
     depends_on:
       - configserver
+      - eurekaserver
     deploy:
       restart_policy:
         condition: on-failure
-        delay: 5s
+        delay: 30s
         max_attempts: 3
         window: 120s
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
   
   loans:
-    image: vitoriacarvalho/loans:latest
+    image: eazybytes/loans:latest
     mem_limit: 700m
     ports:
       - "8090:8090"
@@ -38,18 +59,20 @@ services:
       - eazybank
     depends_on:
       - configserver
+      - eurekaserver
     deploy:
       restart_policy:
         condition: on-failure
-        delay: 5s
+        delay: 30s
         max_attempts: 3
         window: 120s
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
     
   cards:
-    image: vitoriacarvalho/cards:latest
+    image: eazybytes/cards:latest
     mem_limit: 700m
     ports:
       - "9000:9000"
@@ -57,15 +80,17 @@ services:
       - eazybank
     depends_on:
       - configserver
+      - eurekaserver
     deploy:
       restart_policy:
         condition: on-failure
-        delay: 5s
+        delay: 30s
         max_attempts: 3
         window: 120s
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
       
 networks:
   eazybank:
