--- a/accounts/src/main/resources/application.properties
+++ b/accounts/src/main/resources/application.properties
@@ -25,6 +25,12 @@ info.app.version=1.0.0
 
 management.info.env.enabled=true
 
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator= true
+resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.minimumNumberOfCalls= 5
+resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.failureRateThreshold= 50
+resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.waitDurationInOpenState= 30000
+resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.permittedNumberOfCallsInHalfOpenState=2
+
 
 
 
